Fix style and layout issues on landing page

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -695,14 +695,14 @@ footer > div > div > div.footer-container-right {
 }
 
 .hero h1 {
-    font-size: 3.2em;
+    font-size: 3.1em;
     font-weight: bold;
     margin: 0;
     padding: 0;
 }
 
 .hero h3 {
-    font-size: 1.8em;
+    font-size: 1.7em;
 }
 
 .fade-carousel .carousel-inner .item .hero {
@@ -732,7 +732,11 @@ footer > div > div > div.footer-container-right {
     height: 100%;
     z-index: 2;
     background-color: #080d15;
-    opacity: .45;
+    opacity: .38;
+}
+
+.landing-carousel {
+    margin-top: 11vh;
 }
 
 /********************************/
@@ -746,8 +750,8 @@ footer > div > div > div.footer-container-right {
 .btn.btn-hero:hover,
 .btn.btn-hero:focus {
     color: #f5f5f5;
-    background-color: #1abc9c;
-    border-color: #1abc9c;
+    background-color: #000169;
+    border-color: #fff;
     outline: none;
     margin: 10px auto;
 }
@@ -769,11 +773,11 @@ footer > div > div > div.footer-container-right {
 }
 
 .landing-carousel .slides .slide-2 {
-    background-image: url(http://res.cloudinary.com/huxxvk3tt/image/upload/v1424304443/tdx-group_njpyyx.jpg);
+    background-image: url(http://res.cloudinary.com/huxxvk3tt/image/upload/v1424590134/tdx-group5_aoo5kw.jpg);
 }
 
 .landing-carousel .slides .slide-3 {
-    background-image: url(http://res.cloudinary.com/huxxvk3tt/image/upload/v1424304443/tdx-group_njpyyx.jpg);
+    background-image: url(http://res.cloudinary.com/huxxvk3tt/image/upload/v1424590292/tdx-group6_b66jui.jpg);
 }
 
 
